Issue SB-10808 fix: player endpage score alignment fixed (equal paddings added)

--- a/player/public/coreplugins/org.sunbird.player.endpage-1.1/renderer/templates/style.css
+++ b/player/public/coreplugins/org.sunbird.player.endpage-1.1/renderer/templates/style.css
@@ -397,5 +397,6 @@ table {
 }
 
 .ps-score-data-padding-top {
-  padding-top: 3px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
